# video_compression

./: .gitignore  README.md  build_populations.py  colab_pipeline.ipynb  evaluate_keyframe_gop.py  evaluate_predictor.py  extract_latents.py  pyproject.toml  requirements.txt  run_all.py  spectral_analysis.py  stride_sensitivity.py  visualize_umap.py
compressor/compressors/: __init__.py  base_compressor.py  hevc_compressor.py  identity_compressor.py  vae_compressor.py
compressor/pipeline/: base_pipeline.py  measurement_utils.py
